@@ -45,6 +45,7 @@ batScriptConfigLocation := Some("%APP_HOME%\\conf\\smile.ini")
 bashScriptExtraDefines ++= Seq(
   """addJava "-Dsmile.home=${app_home}/.."""",
   """addJava "-Dscala.usejavacp=true"""", // for Scala REPL
+  """addJava "--enable-native-access=ALL-UNNAMED"""",
   """addJava "-Dscala.repl.autoruncode=${app_home}/predef.sc""""
 )
 
@@ -52,18 +53,33 @@ batScriptExtraDefines ++= Seq(
   """call :add_java -Dsmile.home=%APP_HOME%""",
   """call :add_java -Dscala.usejavacp=true""",
   """call :add_java -Dscala.repl.autoruncode=%APP_HOME%\bin\predef.sc""",
-  """call :add_java -Djava.library.path=%APP_HOME%\bin""",
+  """call :add_java --enable-native-access=ALL-UNNAMED""",
   """set OPENBLAS_NO_AVX512=1""",
   """set OPENBLAS_NUM_THREAD=1""",
-  """set PATH=!PATH!;%~dp0"""
+  """set PATH=!PATH!;%APP_HOME%\bin"""
 )
 
 libraryDependencies ++= Seq(
-  "com.github.scopt"   %% "scopt" % "4.1.0",
-  "com.lightbend.akka" %% "akka-stream-alpakka-csv" % "8.0.0",
-  "org.scala-lang" % "scala-compiler"  % "2.13.16",
-  "ch.qos.logback" % "logback-classic" % "1.5.17",
-  "com.formdev"    % "flatlaf"         % "3.5.4",
-  "com.fifesoft"   % "rsyntaxtextarea" % "3.5.4",
-  "com.fifesoft"   % "autocomplete"    % "3.3.2"
+  "com.github.scopt" %% "scopt"           % "4.1.0",
+  "org.scala-lang"   %  "scala-compiler"  % "2.13.17",
+  "org.slf4j"        % "slf4j-simple"     % "2.0.17",
+//  "ch.qos.logback"   %  "logback-classic" % "1.5.19",
+//  "com.formdev"      %  "flatlaf"         % "3.6.1",
+//  "com.fifesoft"     %  "rsyntaxtextarea" % "3.6.0",
+//  "com.fifesoft"     %  "autocomplete"    % "3.3.2"
 )
+
+libraryDependencies ++= {
+  val akkaVersion     = "2.9.5"
+  val akkaHttpVersion = "10.6.3"
+  Seq(
+    "com.typesafe.akka"  %% "akka-actor-typed"         % akkaVersion,
+    "com.typesafe.akka"  %% "akka-stream"              % akkaVersion,
+    "com.typesafe.akka"  %% "akka-pki"                 % akkaVersion,
+    "com.typesafe.akka"  %% "akka-http"                % akkaHttpVersion,
+    "com.typesafe.akka"  %% "akka-http-spray-json"     % akkaHttpVersion,
+    "com.lightbend.akka" %% "akka-stream-alpakka-csv"  % "8.0.0" exclude("com.typesafe.akka", "akka-stream_3"),
+    "com.typesafe.akka"  %% "akka-actor-testkit-typed" % akkaVersion     % Test,
+    "com.typesafe.akka"  %% "akka-http-testkit"        % akkaHttpVersion % Test
+  )
+}
